kubernetes/apps/network/gateway/external/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: "external.${SECRET_DOMAIN}"
      io.cilium/lb-ipam-ips: "192.168.6.47"
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.${SECRET_DOMAIN}"
      tls:
        certificateRefs:
          - kind: Secret
            name: "${SECRET_DOMAIN/./-}-production-tls"
      allowedRoutes:
        namespaces:
          from: All
